--- a/analisador/templates/analisador/relatorio.html
+++ b/analisador/templates/analisador/relatorio.html
@@ -26,6 +26,17 @@
         <pre>{{ resumo_despesas|safe }}</pre>
     </div>
 
+    <div class="report-block">
+    <h2>Transações Não Categorizadas</h2>
+    <p>Considere criar novas regras para as transações abaixo:</p>
+
+    {% if nao_categorizadas %}
+        {{ nao_categorizadas|safe }}
+    {% else %}
+        <p>Parabéns! Todas as suas transações foram categorizadas.</p>
+    {% endif %}
+</div>
+
     <a href="/">Analisar Outro Extrato</a>
 </body>
 </html>
