feat: comparar multiplos extratos, mas sem funçao

--- a/analisador/templates/analisador/pagina_inicial.html
+++ b/analisador/templates/analisador/pagina_inicial.html
@@ -8,6 +8,7 @@
     <h1>Analisador Financeiro</h1>
 
     <p><a href="{% url 'historico' %}">Ver Histórico de Análises</a></p>
+    <p><a href="{% url 'comparar' %}">Comparar Múltiplos Extratos</a></p>
     <hr>
 
     <p>Ou faça o upload de um novo extrato bancário (.xlsx).</p>
