--- a/analisador/templates/analisador/historico.html
+++ b/analisador/templates/analisador/historico.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-4 pb-2 border-bottom">
-        <h1 class="h2"> Histórico de Extratos</h1>
+        <h1 class="h2 mb-0"><i class="bi bi-clock-history me-3"></i>Histórico de Extratos</h1>
     </div>
 
     <div class="card shadow-sm">
@@ -23,7 +23,7 @@
                             <br>
                             <small class="text-muted">Enviado em: {{ extrato.data_upload|date:"d/m/Y \à\s H:i" }}</small>
                         </div>
-                        </li>
+                    </li>
                     {% endfor %}
                 </ul>
             {% else %}
