--- a/analisador/templates/analisador/pagina_inicial.html
+++ b/analisador/templates/analisador/pagina_inicial.html
@@ -8,6 +8,16 @@
         <p class="text-muted fs-5">Olá, {{ user.first_name|default:user.username }}!</p>
     {% endif %}
 
+    <!-- Bloco para exibir mensagens de erro ou sucesso -->
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <!-- Cabeçalho da Página com Ícone -->
     <div class="d-flex justify-content-between align-items-center mb-4 pb-2 border-bottom">
         <h1 class="h2 mb-0"><i class="bi bi-house-door me-3"></i>Dashboard</h1>
@@ -32,7 +42,8 @@
                         </div>
                         <div class="mb-3">
                             <label for="extrato" class="form-label">Arquivo de Extrato (.xlsx):</label>
-                            <input type="file" name="arquivo_extrato" class="form-control" id="extrato" required>
+                            <!-- Adicionado 'accept' para filtrar arquivos no navegador -->
+                            <input type="file" name="arquivo_extrato" class="form-control" id="extrato" required accept=".xlsx">
                         </div>
                         <button type="submit" class="btn btn-primary w-100 mt-3">
                             <i class="bi bi-play-circle"></i> Iniciar Análise
