--- a/analisador/templates/analisador/base.html
+++ b/analisador/templates/analisador/base.html
@@ -30,7 +30,7 @@
         <nav class="sidebar">
             <div class="sidebar-header">
                 <a href="{% url 'home' %}" class="d-flex align-items-center text-white text-decoration-none">
-                    <img src="{% static 'img/logo.png' %}" alt="Finanalytics Logo" width="32" height="32" class="me-2">
+                    <img src="{% static 'img/Logo.png' %}" alt="Finanalytics Logo" width="32" height="32" class="me-2">
                     <span class="fs-4">Finanalytics</span>
                 </a>
             </div>
