--- a/analisador/templates/analisador/base.html
+++ b/analisador/templates/analisador/base.html
@@ -39,9 +39,32 @@
                     <span class="fs-4">Finanalytics</span>
                 </a>
             </div>
+            
+            <!-- =================== LISTA DE LINKS CORRIGIDA =================== -->
             <ul class="nav flex-column">
-                <!-- ... (seus links de navegação aqui) ... -->
+                <li class="nav-item">
+                    <a class="nav-link {% if active_page == 'home' %}active{% endif %}" href="{% url 'home' %}">
+                        <i class="bi bi-house-door"></i> Início / Upload
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if active_page == 'historico' %}active{% endif %}" href="{% url 'historico' %}">
+                        <i class="bi bi-clock-history"></i> Histórico
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if active_page == 'comparar' %}active{% endif %}" href="{% url 'comparar' %}">
+                        <i class="bi bi-bar-chart-line"></i> Comparar Meses
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if active_page == 'regras' %}active{% endif %}" href="{% url 'gerenciar_regras' %}">
+                        <i class="bi bi-pencil-square"></i> Gerenciar Regras
+                    </a>
+                </li>
             </ul>
+            <!-- ================================================================ -->
+
             <hr>
             <div class="text-center">
                 {% if user.is_authenticated %}
