feat: Lê extrato do Nubank, cor no valor, e

--- a/analisador/templates/analisador/detalhe_categoria.html
+++ b/analisador/templates/analisador/detalhe_categoria.html
@@ -17,17 +17,16 @@
                             <th>Data</th>
                             <th>Descrição</th>
                             <th class="text-end">Valor</th>
-                            <th class="text-center">Ação</th> <!-- Nova Coluna -->
+                            <th class="text-center">Ação</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for transacao in transacoes %}
                         <tr>
                             <td>{{ transacao.data }}</td>
-                            <td>{{ transacao.descricao }}</td>
-                            <td class="text-end font-monospace">R$ {{ transacao.valor|floatformat:2 }}</td>
+                            <td>{{ transacao.descricao_limpa }}</td>
+                            <td class="text-end font-monospace {% if transacao.topico == 'Receita' %}valor-receita{% else %}valor-despesa{% endif %}">R$ {{ transacao.valor|floatformat:2 }}</td>
                             <td class="text-center">
-                                <!-- Novo Botão -->
                                 <a href="{% url 'editar_transacao' transacao_id=transacao.id %}" class="btn btn-sm btn-outline-warning">Editar</a>
                             </td>
                         </tr>
