--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -108,3 +108,16 @@ body {
     background-color: #2c3e50;
     border: 1px solid #34495e;
 }
+
+
+
+/* Estilos para valores financeiros */
+.table .valor-receita {
+    color: var(--verde-sucesso) !important; /* Adicionado !important como garantia */
+    font-weight: bold;
+}
+
+.table .valor-despesa {
+    color: var(--vermelho-perigo) !important; /* Adicionado !important como garantia */
+    font-weight: bold;
+}
